--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,6 +48,9 @@ jobs:
         with:
           terraform_wrapper: false
           terraform_version: 1.11.1
+      - name: Force Unlock Terraform State
+        working-directory: terraform
+        run: terraform force-unlock 25b57e3b-7871-5a26-c9e4-87459c20dcb1 || echo "No lock or already unlocked"        
 
       - name: Terraform Init
         working-directory: terraform
