Glue job zip File.

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 # Specify directories or files to search for tests
 testpaths = tests
+pythonpath = .
 
 # Additional command-line options for pytest.
 # For example, --maxfail=1 stops on first failure, and -q runs in quiet mode.
