Glue job zip File.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Run tests
         run: |
           source venv/bin/activate
+          export PYTHONPATH=$(pwd)
           pytest --maxfail=1 --disable-warnings -q
 
   terraform:
