--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -68,4 +68,4 @@ jobs:
       - name: Terraform Apply
         working-directory: terraform
         #run: terraform apply -auto-approve tfplan
-        run: terraform destroy -auto-approve destroy-tfplan
+        run: terraform destroy -auto-approve
